looks good enough

--- a/site/demo.html
+++ b/site/demo.html
@@ -26,6 +26,7 @@
             allowfullscreen
           ></iframe>
         </div>
+        <p class="fineprint">Not affiliated with OpenAI.</p>
       </section>
     </main>
   </body>
