--- a/site/index.html
+++ b/site/index.html
@@ -91,8 +91,8 @@
       <section class="card">
         <h2>Support</h2>
         <p>Support page: <a href="./support.html">Coming soon</a></p>
-        <p>Email: <a href="mailto:support@example.com">support@example.com</a></p>
-        <p class="hint">Replace with your real support email before submitting.</p>
+        <p>Email: <a href="mailto:prashantased@gmail.com">prashantased@gmail.com</a></p>
+        <p class="hint">Not affiliated with OpenAI.</p>
       </section>
 
       <section class="grid" aria-label="Important links">
@@ -116,6 +116,7 @@
 
       <footer class="footer">
         <p>© <span id="year"></span> Prompt Bank</p>
+        <p class="fineprint">Not affiliated with OpenAI.</p>
       </footer>
     </main>
 
