--- a/site/privacy.html
+++ b/site/privacy.html
@@ -24,35 +24,55 @@
 
         <h2>Information We Collect</h2>
         <ul>
-          <li><strong>Saved prompts and metadata</strong> (title, tags, source, timestamps) that you submit.</li>
-          <li><strong>Authentication identifiers</strong> (for example, an Auth0 user subject ID) to separate user data.</li>
-          <li><strong>Operational logs</strong> (limited) for debugging and reliability.</li>
+          <li><strong>Saved prompts and metadata</strong> (e.g., title, tags, source, timestamps) that you submit.</li>
+          <li><strong>Authentication identifiers</strong> (e.g., an Auth0 user ID) to associate prompts with your account.</li>
+          <li><strong>Operational data</strong> (limited request/response metadata and error logs) for security and reliability.</li>
         </ul>
 
         <h2>How We Use Information</h2>
         <ul>
           <li>To provide prompt storage, search, and retrieval features.</li>
           <li>To secure the service and prevent abuse.</li>
-          <li>To operate and improve reliability.</li>
+          <li>To operate, maintain, and improve reliability.</li>
         </ul>
 
         <h2>Data Processing & Storage</h2>
         <ul>
-          <li>Prompts may be embedded using an AWS Bedrock embeddings model.</li>
-          <li>Embeddings and metadata may be stored in AWS S3 Vectors.</li>
+          <li>To enable semantic search, your prompt text may be processed to create an embedding using AWS Bedrock.</li>
+          <li>Embeddings and prompt metadata may be stored in AWS S3 Vectors.</li>
         </ul>
 
+        <h2>Retention and Deletion</h2>
+        <p>
+          Prompts remain stored until you delete them or the service is discontinued. If you request account deletion, we
+          will delete your stored prompts and associated vectors within a reasonable period, subject to legal and
+          operational requirements.
+        </p>
+
         <h2>Sharing</h2>
-        <p>We do not sell your personal information. We share data only with service providers needed to operate the app.</p>
+        <p>
+          We do not sell your personal information. We share data only with service providers and infrastructure
+          providers used to operate the service (for example, AWS and authentication providers).
+        </p>
+
+        <h2>Your Choices</h2>
+        <ul>
+          <li>You can delete saved prompts from within the product experience.</li>
+          <li>You can contact us to request deletion of your account data.</li>
+        </ul>
 
         <h2>Security</h2>
         <p>We use industry-standard measures to protect data, but no system can be guaranteed 100% secure.</p>
 
+        <h2>Children’s Privacy</h2>
+        <p>The service is not intended for children under 13, and we do not knowingly collect data from children under 13.</p>
+
         <h2>Contact</h2>
         <p>
           For privacy questions, contact:
-          <a href="mailto:support@example.com">support@example.com</a>
+          <a href="mailto:prashantased@gmail.com">prashantased@gmail.com</a>
         </p>
+        <p class="fineprint">Not affiliated with OpenAI.</p>
       </section>
     </main>
 
