--- a/site/support.html
+++ b/site/support.html
@@ -18,11 +18,10 @@
         <p><strong>Coming soon.</strong></p>
         <p>
           In the meantime, contact:
-          <a href="mailto:support@example.com">support@example.com</a>
+          <a href="mailto:prashantased@gmail.com">prashantased@gmail.com</a>
         </p>
-        <p class="hint">Replace with your real support email before submitting.</p>
+        <p class="hint">Not affiliated with OpenAI.</p>
       </section>
     </main>
   </body>
 </html>
-
