--- a/site/terms.html
+++ b/site/terms.html
@@ -41,10 +41,9 @@
 
         <h2>Contact</h2>
         <p>
-          Support: <a href="mailto:support@example.com">support@example.com</a>
+          Support: <a href="mailto:prashantased@gmail.com">prashantased@gmail.com</a>
         </p>
-
-        <p class="hint">Update these terms to match your business requirements before submitting.</p>
+        <p class="fineprint">Not affiliated with OpenAI.</p>
       </section>
     </main>
 
